fixed mobile navbar collapse transitions

--- a/css/aWholeLotOf.css
+++ b/css/aWholeLotOf.css
@@ -3472,6 +3472,7 @@ tbody.collapse.in {
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 hsla(0, 0%, 100%, 0.1);
   -webkit-overflow-scrolling: touch;
+  transition: all 0.2s ease-in-out;
 }
 .navbar-collapse:after,
 .navbar-collapse:before {
@@ -3846,6 +3847,7 @@ tbody.collapse.in {
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #000;
+    
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
